--- a/package.json
+++ b/package.json
@@ -10,6 +10,20 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-classes": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "bower-webpack-plugin": "^0.1.9",
+    "eslint": "^2.9.0",
+    "extract-css-block-webpack-plugin": "^1.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "haikro": "^2.3.2",
+    "imports-loader": "^0.6.5",
+    "lintspaces-cli": "^0.1.1"
   },
   "engines": {
     "node": "5.10.1"
