--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^2.9.0",
     "haikro": "^2.3.2",
     "lintspaces-cli": "^0.1.1"
   },
