--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@financial-times/n-safe-logger",
+  "name": "n-safe-logger",
   "main": "main.js",
   "dependencies": {
     "haikro": "^2.2.0"
@@ -10,12 +10,19 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-classes": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
     "eslint": "^2.9.0",
     "haikro": "^2.3.2",
-    "lintspaces-cli": "^0.1.1"
+    "lintspaces-cli": "^0.1.1",
+    "webpack": "^1.13.0"
   },
   "engines": {
     "node": "5.10.1"
   },
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
