--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "n-safe-logger",
   "main": "main.js",
   "dependencies": {
-    "haikro": "^2.2.0"
+    "@financial-times/n-logger": "^5.3.0"
   },
   "repository": {
     "type": "git",
