--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "engines": {
     "node": "5.10.1"
   },
-  "version": "1.0.2"
+  "version": "1.0.3",
+  "scripts": {
+    "prepublish": "make build"
+  }
 }
