--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-es2015-classes": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-cli": "^6.5.1",
+    "babel-plugin-transform-object-assign": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-register": "^6.5.1",
     "eslint": "^2.9.0",
     "haikro": "^2.3.2",
     "lintspaces-cli": "^0.1.1",
