--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n-safe-logger",
-  "main": "main.js",
+  "main": "build/main.js",
   "dependencies": {
     "@financial-times/n-logger": "^5.3.0"
   },
@@ -22,7 +22,7 @@
   "engines": {
     "node": "5.10.1"
   },
-  "version": "1.0.3",
+  "version": "1.0.5",
   "scripts": {
     "prepublish": "make build"
   }
