--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "babel-plugin-transform-object-assign": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-register": "^6.5.1",
+    "chai": "^3.5.0",
+    "chai-string": "^1.2.0",
     "eslint": "^2.9.0",
     "haikro": "^2.3.2",
     "lintspaces-cli": "^0.1.1",
+    "sinon": "^1.17.4",
     "webpack": "^1.13.0"
   },
   "engines": {
     "node": "5.10.1"
   },
-  "version": "1.0.6",
+  "version": "1.1",
   "scripts": {
     "prepublish": "make build"
   }
