--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chai": "^3.5.0",
     "eslint": "^2.9.0",
     "lintspaces-cli": "^0.1.1",
+    "mocha": "^2.2.1",
     "sinon": "^1.17.4"
   },
   "engines": {
