--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,13 @@
 /.babelrc
 /.editorconfig
-/.eslintrc.json
+/.eslintrc.js
 /.gitignore
 /circle.yml
 /ft.yml
 /Makefile
+/n.Makefile
 
 /.idea/
 /src/
+/node_modules/
 /test/
