--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^2.9.0",
     "lintspaces-cli": "^0.1.1",
     "mocha": "^2.2.1",
+    "npm-prepublish": "^1.2.1",
     "sinon": "^1.17.4"
   },
   "engines": {
