--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "devDependencies": {
     "@financial-times/n-gage": "^1.8.21",
     "babel-cli": "^6.5.1",
-    "babel-plugin-transform-object-assign": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-env": "^1.1.8",
     "babel-register": "^6.5.1",
     "chai": "^3.5.0",
     "eslint": "^2.9.0",
