--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@financial-times/n-logger": "^6.0.1"
   },
   "devDependencies": {
-    "@financial-times/n-gage": "3.4.0",
+    "@financial-times/n-gage": "^3.6.0",
     "babel-cli": "^6.5.1",
     "babel-preset-env": "^1.1.8",
     "babel-register": "^6.5.1",
