--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "babel-register": "^6.5.1",
     "chai": "^3.5.0",
     "eslint": "^2.9.0",
-    "lintspaces-cli": "^0.1.1",
     "mocha": "^5.2.0",
     "npm-prepublish": "^1.2.1",
-    "sinon": "^1.17.4",
+    "proxyquire": "^2.1.3",
+    "sinon": "^7.4.1",
     "snyk": "^1.168.0"
   }
 }
