--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "@financial-times/n-mask-logger",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "build/main.js",
+  "main": "src/main.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/n-mask-logger.git"
   },
   "scripts": {
-    "prepublish": "make build",
     "precommit": "node_modules/.bin/secret-squirrel",
     "commitmsg": "node_modules/.bin/secret-squirrel-commitmsg",
     "prepush": "make verify -j3",
@@ -19,13 +18,9 @@
   },
   "devDependencies": {
     "@financial-times/n-gage": "^3.6.0",
-    "babel-cli": "^6.5.1",
-    "babel-preset-env": "^1.1.8",
-    "babel-register": "^6.5.1",
     "chai": "^3.5.0",
     "eslint": "^2.9.0",
     "mocha": "^5.2.0",
-    "npm-prepublish": "^1.2.1",
     "proxyquire": "^2.1.3",
     "sinon": "^7.4.1",
     "snyk": "^1.168.0"
