--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "url": "https://github.com/Financial-Times/n-mask-logger.git"
   },
   "scripts": {
-    "precommit": "node_modules/.bin/secret-squirrel",
-    "commitmsg": "node_modules/.bin/secret-squirrel-commitmsg",
-    "prepush": "make verify -j3",
     "prepare": "npx snyk protect || npx snyk protect -d || true"
   },
   "dependencies": {
@@ -23,5 +20,12 @@
     "proxyquire": "^2.1.3",
     "sinon": "^7.4.1",
     "snyk": "^1.168.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "node_modules/.bin/secret-squirrel-commitmsg",
+      "pre-commit": "node_modules/.bin/secret-squirrel",
+      "pre-push": "make verify -j3"
+    }
   }
 }
