--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
       "pre-commit": "node_modules/.bin/secret-squirrel",
       "pre-push": "make verify -j3"
     }
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
