--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/Financial-Times/n-mask-logger.git"
   },
   "scripts": {
-    "prepare": "npx snyk protect || npx snyk protect -d || true"
+    "prepare": "npx snyk protect || npx snyk protect -d || true",
+    "preinstall": "npm_config_yes=true npx check-engine"
   },
   "dependencies": {
     "@financial-times/n-logger": "^6.0.1"
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@financial-times/n-gage": "^8.3.2",
     "chai": "^4.2.0",
+    "check-engines": "^1.5.0",
     "mocha": "^6.2.0",
     "proxyquire": "^2.1.3",
     "sinon": "^7.4.1",
@@ -29,6 +31,11 @@
     }
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "7.x"
+  },
+  "volta": {
+    "node": "12.22.5",
+    "npm": "7.20.2"
   }
 }
