--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@financial-times/n-gage": "^8.3.2",
     "chai": "^4.2.0",
-    "check-engines": "^1.5.0",
+    "check-engine": "^1.10.1",
     "mocha": "^6.2.0",
     "proxyquire": "^2.1.3",
     "sinon": "^7.4.1",
