Run tests on Node.js 18
This doesn't need as much work as the n-logger PR here:
https://github.com/Financial-Times/n-logger/pull/154

This is because we don't perform any tests which touch `fetch`, because
mask-logger only tests that it performs n-logger logging with masked
fields. This means we can safely start supporting Node.js 18 without
having to bump the n-logger version - no code changes were needed to
bump version support, only tests.

--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     }
   },
   "engines": {
-    "node": "14.x || 16.x",
+    "node": "14.x || 16.x || 18.x",
     "npm": "7.x || 8.x"
   },
   "volta": {
-    "node": "16.14.1",
-    "npm": "7.20.2"
+    "node": "16.17.0",
+    "npm": "8.19.2"
   }
 }
