--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   },
   "engines": {
     "node": "14.x || 16.x || 18.x",
-    "npm": "7.x || 8.x"
+    "npm": "7.x || 8.x || 9.x"
   },
   "volta": {
-    "node": "16.17.0",
-    "npm": "8.19.2"
+    "node": "18.13.0",
+    "npm": "9.4.1"
   }
 }
